# Youtube-Blogger

./: README.md  app1.py  report.md  utils.py
youtube_blogger/: README.md  pyproject.toml
youtube_blogger/src/youtube_blogger/: crew.py  main.py
youtube_blogger/src/youtube_blogger/config/: agents.yaml  tasks.yaml
