[project]
name = "youtube_blogger"
version = "0.1.0"
description = "youtube_blogger using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
youtube_blogger = "youtube_blogger.main:run"
run_crew = "youtube_blogger.main:run"
train = "youtube_blogger.main:train"
replay = "youtube_blogger.main:replay"
test = "youtube_blogger.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
